Fixed minor issues

--- a/.github/ISSUE_TEMPLATE/translations-issue.yml
+++ b/.github/ISSUE_TEMPLATE/translations-issue.yml
@@ -1,7 +1,7 @@
 name: Probleem met vertalingen
 description: Meld een verkeerde vertaling
 title: "[Incorrecte vertaling] - Vertaling voor ... is incorrect"
-labels: ["translations", "bug"]
+labels: ["translation", "bug"]
 body:
   - type: input
     id: file
