Nieuwe mods toegevoegd
- Nieuwe mods:
  - [beaverbuddies](Data/Localizations/Plugins/beaverbuddies)
  - [Nerro.HalfRoofs](Data/Localizations/Plugins/Nerro.HalfRoofs)
  - [Timberborn.IgorZ.Automation](Data/Localizations/Plugins/Timberborn.IgorZ.Automation)
  - [Timberborn.OldGopher.Pipe](Data/Localizations/Plugins/Timberborn.OldGopher.Pipe)
  - [Tobbert.ChooChoo](Data/Localizations/Plugins/Tobbert.ChooChoo)

--- a/.github/ISSUE_TEMPLATE/translations-issue.yml
+++ b/.github/ISSUE_TEMPLATE/translations-issue.yml
@@ -25,7 +25,7 @@ body:
     id: current_value
     attributes:
       label: Huidige vertaling
-      description: "Provide the current (incorrect) translation."
+      description: "Geef de huidige vertaling"
       placeholder: "Shanty Speaker"
     validations:
       required: true
@@ -34,7 +34,7 @@ body:
     id: expected_value
     attributes:
       label: Verbeterde vertaling
-      description: "Geef de betere vertaling"
+      description: "Geef de verbeterde vertaling"
       placeholder: "Shanty Luidspreker"
     validations:
       required: false
