--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,6 @@
 {
-  "recommendations": ["janisdd.vscode-edit-csv"]
+  "recommendations": [
+    "janisdd.vscode-edit-csv",
+    "visualstudiotoolsforunity.vstuc"
+  ]
 }
