--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,3 @@
 {
-  "recommendations": [
-    "janisdd.vscode-edit-csv",
-    "visualstudiotoolsforunity.vstuc"
-  ]
+  "recommendations": ["janisdd.vscode-edit-csv", "hancel.google-translate"]
 }
