--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "Name": "Nederlands taalpakket",
-  "Version": "0.1.5",
+  "Version": "0.1.6",
   "Id": "Agroqirax.Languages.Dutch",
   "MinimumGameVersion": "0.0.0.0",
   "Description": "Nederlandse vertalingen voor het spel en een aantal populaire mods.\n
@@ -21,6 +21,8 @@
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3365256099]Battery.PowerShaftExtensions[/url] (v2.0.2.15)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3293380223]beaverbuddies[/url] (v1.2.6)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3295782631]Bentos[/url] (v0.6.5.01)
+    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3410576524]BobPlatforms[/url] (v0.6.0.0)
+    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3377606148]BobStorage[/url] (v0.6.0.3)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3362952283]BotKits[/url] (v0.6.5.00)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3321838014]Cordial.BoosterJuice[/url] (v0.0.2.0)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3336999108]Cordial.ForrestTool[/url] (v0.0.1.3)
@@ -28,10 +30,10 @@
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3377422105]Cordial.Mods.DeleteThatThing5[/url] (v0.1.0)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3343029129]Cordial.Mods.PlantingOverride[/url] (v0.0.2.0)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3321521358]eMka.GoodStatistics[/url] (v0.6.5.1)
-    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3346318229]Emberpelts[/url] (v0.6.0.12)
+    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3346318229]Emberpelts[/url] (v0.6.0.26)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3372885855]Emberpelts.ProjectPhoenix[/url] (v0.6.0.0)
-    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3374011054]eMka.Minimap[/url] (v0.6.9.4)
-    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3283831040]eMka.ModSettings[/url] (v0.6.9.4)
+    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3374011054]eMka.Minimap[/url] (v0.6.9.5)
+    [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3283831040]eMka.ModSettings[/url] (v0.6.9.5)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3354490402]FindIdleBeavers[/url] (v0.1)
     [*][url=https://mod.io/g/timberborn/m/geothermalpowerplant]geothermalpowerplant[/url] (v1.3.0) (mod.io)
     [*][url=https://steamcommunity.com/sharedfiles/filedetails/?id=3283819933]GreedyBuilders[/url] (v0.6.5.04)
@@ -97,6 +99,12 @@
     },
     {
       "Id": "Bentos"
+    },
+    {
+      "Id": "BobPlatforms"
+    },
+    {
+      "Id": "BobStorage"
     },
     {
       "Id": "BotKits"
