--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,7 @@
 {
-  "recommendations": ["janisdd.vscode-edit-csv", "hancel.google-translate"]
+  "recommendations": [
+    "janisdd.vscode-edit-csv",
+    "hancel.google-translate",
+    "agroqirax.timberborn-modding-ext"
+  ]
 }
